infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tudumm
  labels:
    app.kubernetes.io/part-of: tudumm
    environment: production
